# git-search-mcp

./: .pre-commit-config.yaml  README.md  debug.py  pyproject.toml
git_search_mcp/: server.py
